--- a/src/app/views/offers/components/offers-content/offers-list/offer-detail/offer-detail.component.html
+++ b/src/app/views/offers/components/offers-content/offers-list/offer-detail/offer-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="!error">
-    <h2>FIRMA: {{offer.getCompanyName()}}</h2>
-    <h4>ROZMIAR FIRMY: {{offer.getCompanySize()}}</h4>
-    <h4>OPIS: {{offer.getDescription()}}</h4>
+    <h2>FIRMA: {{offer.companyName}}</h2>
+    <h4>ROZMIAR FIRMY: {{offer.companySize}}</h4>
+    <h4>OPIS: {{offer.description}}</h4>
 </div>
 <div class="error"*ngIf="error">sorry we Could not find this offer</div>
