--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,26 @@
-null
+mat-sidenav-container, mat-sidenav-content, mat-sidenav {
+  max-height: 100vh;
+  margin: 0;
+  overflow: hidden;
+}
+
+mat-sidenav {
+  width: 250px;
+}
+
+.header {
+  min-height: 25vh;
+}
+
+.headerForSM {
+  min-height: 18vh;
+}
+
+.pageContent {
+  min-height: 75vh;
+}
+
+.pageContentForSM {
+  min-height: 82vh;
+  background-color: green;
+}
