--- a/src/app/shared/components/navigation-menu/navigation-menu.component.css
+++ b/src/app/shared/components/navigation-menu/navigation-menu.component.css
@@ -1,14 +1,23 @@
+.mat-toolbar {
+  background-color: white;
+  padding-top: 20px;
+  min-height: 9vh;
+}
+
 .container {
   display: flex;
+  min-height: 100%;
 }
 
 p {
   font-size: 12px;
+  padding-left: 5px;
 }
 
 a {
   font-size: 15px;
-  padding: 5px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 a:hover {
@@ -16,22 +25,43 @@ a:hover {
   color: blue;
 }
 
-.postAJob {
-  padding-left: 20px;
-  padding-right: 20px;
+#postAJob {
   background-color: #ff4081;
   border-radius: 25px;
   color: white;
 }
 
-.menuOptions {
+#menuOptions {
   margin-left: auto;
 }
 
-.tab {
+#tab {
   font-size: 25px;
 }
 
-.tab:hover {
+#tab:hover {
   cursor: pointer;
+}
+
+#dayNightOption {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+}
+
+#navForNORM {
+  display: flex;
+  align-self: center;
+}
+
+#leftControllImage {
+  padding-right: 7px;
+}
+
+#rightControllImage {
+  padding-left: 7px;
+}
+
+#iconicButton {
+  border: none;
 }
