--- a/src/app/views/offers/components/offers-content/offers-content.component.css
+++ b/src/app/views/offers/components/offers-content/offers-content.component.css
@@ -1,9 +1,15 @@
 .container {
-  display: flex;
+  min-height: 75vh;
   width: 100%;
-  justify-content: space-around;
+  background-color: #F5F5F5;
 }
 
 .myColumn {
+  min-height: 75vh;
+  width: 100%;
+}
+
+.myColumnForSm {
+  min-height: 81vh;
   width: 100%;
 }
