--- a/src/app/views/offers/components/offers-content/offers-content.component.scss
+++ b/src/app/views/offers/components/offers-content/offers-content.component.scss
@@ -1,10 +1,13 @@
 .container{
-    display:flex;
-    width:100%;
-    justify-content: space-around;
+    min-height: 75vh;
+    width: 100%;
+    background-color:#F5F5F5;
 }
-
 .myColumn{
-    width:100%;
+    min-height: 75vh;
+    width: 100%;
 }
-
+.myColumnForSm{
+    min-height: 81vh;
+    width: 100%;
+}
