--- a/src/app/views/offers/components/offers-content/offers-list/offers-list.component.css
+++ b/src/app/views/offers/components/offers-content/offers-list/offers-list.component.css
@@ -1,3 +1,14 @@
-.myOffer:hover {
-  cursor: pointer;
+.container {
+  min-height: 100%;
+  width: 100%;
+  display: flex;
+  overflow-y: auto;
+  height: 1px;
+}
+
+.myOffer {
+  align-self: center;
+  width: 98%;
+  max-height: 80px;
+  margin-bottom: 10px;
 }
