--- a/src/app/views/offers/components/offers-content/offers-list/offers-list.component.html
+++ b/src/app/views/offers/components/offers-content/offers-list/offers-list.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" fxLayout="column">
     <app-offer
-    *ngFor="let offer of offers"
-    [offer] = "offer"
-    class="myOffer">
+        *ngFor="let offer of offers"
+        [offer] = "offer"
+        class="myOffer">
     </app-offer>
 </div>
