--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
 @import url(d:\Projects\Web\JustJoinITSzablon\src\styles\deeppurple-amber.css);
 /*@import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css'*/
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+html, body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+}
