--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
-
 @import 'styles/_overrides';
 @import 'styles/_variables';
 @import 'styles/deeppurple-amber.css';
 /*@import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css'*/
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-
-
+html, body {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+  }
 
