--- a/src/app/shared/components/filter/filter.component.html
+++ b/src/app/shared/components/filter/filter.component.html
@@ -31,9 +31,7 @@
                     </button>
                 </div>
                 <div id="dayNightOption">
-                    <mat-icon id="leftControllImage">wb_sunny</mat-icon>
-                    <mat-slide-toggle color="primary"></mat-slide-toggle>
-                    <mat-icon id="rightControllImage">brightness_3</mat-icon>
+                    <app-theme-toggler></app-theme-toggler>
                 </div>
             </div>
             <div fxLayout="row">
