--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
 @import 'styles/_overrides';
 @import 'styles/_variables';
-@import 'styles/deeppurple-amber.css';
-/*@import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css'*/
+@import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 html, body {
