--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,21 +1,29 @@
+@import "../styles/variables";
+
 mat-sidenav-container, mat-sidenav-content, mat-sidenav {
-    max-height: 100vh;
-    margin: 0;
-    overflow: hidden;
+    max-height: $globalHeight;
 }
 mat-sidenav {
-    width: 250px;
+    width: $sidenavWidth;
 }
-.header{
-    min-height: 25vh;
-}
-.headerForSM{
-    min-height: 18vh;
-}
-.pageContent{
-    min-height: 75vh;
-}
-.pageContentForSM{
-    min-height: 82vh;
-    background-color: green;
+#container{
+    #navigation{
+        min-height: $navigationHeight;
+    }
+    #filtration{
+        .filtrationForNORM{
+            min-height: $filtrationHeightForNORM;
+        }
+        .filtrationForSM{
+            min-height: $filtrationHeightForSM;
+        }
+    }
+    #content{
+        .contentForNORM{
+            min-height: $contentHeightForNORM;
+        }
+        .contentForSM{
+            min-height: $contentHeightForSM;
+        }
+    }   
 }
