--- a/src/app/views/offers/components/offers-content/map/map.component.html
+++ b/src/app/views/offers/components/offers-content/map/map.component.html
@@ -1,1 +1,9 @@
-<h3>Map is working</h3>
+
+<div id="container">
+        <div class="map"
+        #map
+        leaflet
+        [leafletOptions]="options"
+        [leafletLayers]="layers"></div>
+</div>
+
