--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 html, body {
-    height: 100vh;
+    height: $globalHeight;
     width: 100vw;
     margin: 0;
   }
