--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,6 +12,16 @@ $contentHeightForSM: 82vh;
 
 $sidenavWidth: 250px;
 
+$imagePaddingValue: 7px;
+
 //colors
+$globalBackgroundColor: #f3f6f8;
+
 $navigationBackgroundColor: white;
+
+$buttonBackgroundColor: white;
+$buttonFontColor: grey;
+
+$imageColor: grey;
+
 
