--- a/src/app/shared/components/filter/filter.component.html
+++ b/src/app/shared/components/filter/filter.component.html
@@ -1,123 +1,4 @@
-<div class="container">
-    <mat-toolbar id="matToolbarForNORM" fxHide.lt-md>
-        <div class="subContainer" >
-            <div class="myRow" fxLayout="row">
-                <div fxLayout="row" class="cities">
-                    <div #cityParent fxLayout="row">
-                        <button *ngFor="let city of mainCities" 
-                            class = "myButton filterButton"
-                            mat-stroked-button
-                            (click)="onCityButtonClicked($event)"
-                            id={{city}}>{{city}}
-                        </button>
-                        <button 
-                            #hiddenCity
-                            class="myButton filterButton" 
-                            mat-stroked-button
-                            (click)="onCityButtonClicked($event)"
-                            id={{hiddenCityName}}
-                            >{{ hiddenCityName }}
-                        </button> 
-                    </div>
-                    <mat-menu #hiddenCitiesMenu>
-                        <button *ngFor="let city of hiddenCities"
-                            mat-menu-item
-                            (click)="onCityHiddenButtonClicked($event)"
-                            id="{{city}}">{{ city }}
-                        </button>
-                    </mat-menu>
-                    <button class="iconicButton" [matMenuTriggerFor]="hiddenCitiesMenu">
-                        <mat-icon>more_horiz</mat-icon>
-                    </button>
-                </div>
-                <div id="dayNightOption">
-                    <app-theme-toggler></app-theme-toggler>
-                </div>
-            </div>
-            <div fxLayout="row">
-                <div fxLayout="row" class="technologies">
-                    <div #technologyParent fxLayout="row" >
-                            <button *ngFor="let technology of mainTechnologies"
-                                class = "myButton filterButton"
-                                mat-stroked-button
-                                (click)="onTechnologyButtonClicked($event)"
-                                id={{technology}}>{{ technology }}
-                            </button>
-                            <button 
-                                #hiddenTechnology
-                                class="myButton filterButton" 
-                                mat-stroked-button
-                                (click)="onTechnologyButtonClicked($event)"
-                                id={{hiddenTechnologyName}}
-                                >{{ hiddenTechnologyName }}
-                            </button>
-                        </div> 
-                        <mat-menu #hiddenTechnologiesMenu>
-                            <button *ngFor="let technology of hiddenTechnologies"
-                                mat-menu-item
-                                (click)="onTechnologyHiddenButtonClicked($event)"
-                                id="{{technology}}">{{ technology }}
-                            </button>
-                        </mat-menu>
-                        <button class="iconicButton" [matMenuTriggerFor]="hiddenTechnologiesMenu">
-                            <mat-icon>more_horiz</mat-icon>
-                        </button>
-                </div>  
-                <div class="options">
-                    <mat-menu #salary>
-                        <div id="salaryMenu" mat-menu-item fxLayout="column">
-                            <span>Choose min salary</span>
-                            <mat-slider 
-                                thumbLabel
-                                [displayWith]="formatLabel"
-                                min="0"
-                                step="500"
-                                max="50000"
-                                (input)="onSliderSalaryChange($event)">
-                            </mat-slider>
-                        </div>
-                    </mat-menu>
-                    <mat-menu #expLevel >
-                        <button *ngFor="let elem of levels" 
-                            mat-menu-item
-                            (click)="onExperienceLevelChoose($event)"
-                            id="{{elem}}">{{ elem }}
-                        </button>
-                    </mat-menu>
-                    <button class="expandableButton" mat-stroked-button [matMenuTriggerFor]="salary">
-                        <mat-icon id="leftControllImage">attach_money</mat-icon>
-                        <span #salaryText>Salary</span>
-                        <mat-icon id="rightControllImage">keyboard_arrow_down</mat-icon>
-                    </button>
-                    <button class="expandableButton" mat-stroked-button [matMenuTriggerFor]="expLevel">
-                        <mat-icon id="leftControllImage">trending_up</mat-icon>
-                        <span #experienceText>Exp.level</span>
-                        <mat-icon id="rightControllImage">keyboard_arrow_down</mat-icon>
-                    </button>               
-                </div>
-            </div>   
-        </div>
-    </mat-toolbar>
-    <mat-toolbar id="matToolbarForSM" fxHide.gt-sm fxLayout="row">
-        <div class="columnForSM">
-            <select name="" id="citySelect" class="selectForSM">
-                <option selected disabled hidden></option>
-                <option 
-                    *ngFor="let city of mainCities.concat(hiddenCities)" 
-                    [value]="city"
-                    >{{ city }}
-                </option>
-            </select>
-        </div>
-        <div class="columnForSM">
-            <select id="citySelect" class="selectForSM">
-                <option selected disabled hidden></option>
-                <option 
-                    *ngFor="let technology of mainTechnologies.concat(hiddenTechnologies)" 
-                    [value]="technology"
-                    >{{ technology }}
-                </option>
-            </select>
-        </div>      
-    </mat-toolbar>
+<div id="container">
+    <app-filter-content fxHide.lt-md fxFlex="100%"></app-filter-content>
+    <app-filter-content-sm fxHide.gt-sm fxFlex="100%"></app-filter-content-sm>
 </div>
