--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -1,3 +1,83 @@
+@import './variables';
+
 %sidenavElement{
     padding-left: 15px;
+}
+
+%leftControllImage{
+    color: $imageColor;
+    padding-right: $imagePaddingValue;
+}
+%rightControllImage{
+    color: $imageColor;
+    padding-left: $imagePaddingValue;
+}
+
+//offer
+%offerButtonContainer{
+    width: 100%;
+    display: flex;
+    border-radius: 10px;
+    background-color: $buttonBackgroundColor;
+    min-height: 70px;
+    max-height: 70px;
+    border: none;
+}
+%offerButtonContainer:hover{
+    cursor: pointer;
+}
+%offerButtonContainer:focus{
+    outline: 0;
+}
+%offerFrame{
+    width: 5px;
+    background-color: green;
+    border-radius: 10px;
+}
+%offerLogo{
+    width: 80px;
+    align-self: center;
+}
+%offerRows{
+    width: 85%;
+}
+%offerMyRow{
+    height: 50%;
+    max-height: 50%;
+    margin-left: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+%offerPosition{
+    color:darkslategrey;
+    align-self: center;
+    font-size: 20px;
+}
+%offerMoney{
+    color: #1ec66c;
+    font-size: 18px;
+    align-self: center;
+}
+%offerDate{
+    align-self: center;
+    margin-left: 10px;
+}
+%offerTag{
+    background-color: white;
+    border-radius: 15px;
+    border-width: 1px; 
+    border-style: solid;
+    border-color: #e5e5e5;
+    padding-left: 5px;
+    padding-right:5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    font-size: 13px;
+    margin-left: 5px;
+    align-self: center;
+    color: grey;
+}
+%offerTagBackground{
+    background-color: #d9ddfc;
+    color: #4256ef;
 }
