mapa, detail, poczatkowa faza tworzenia routingu do filtrowania

--- a/src/app/shared/components/filter/filter-content-sm/filter-content-sm.component.scss
+++ b/src/app/shared/components/filter/filter-content-sm/filter-content-sm.component.scss
@@ -20,9 +20,9 @@
             font-size: 20px;
             margin: 5px;
             border-radius: 5px;
-        }
-        .mySelect:focus{
-            outline: 0;
+            &:focus{
+                outline: 0;
+            }
         }
         select {
             -webkit-appearance: none;
