--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -22,6 +22,8 @@ $navigationBackgroundColor: white;
 $buttonBackgroundColor: white;
 $buttonFontColor: grey;
 
+$valueColor: black;
+
 $imageColor: grey;
 
 
