--- a/src/app/views/offers/components/offers-content/offers-list/offer-sm/offer-sm.component.html
+++ b/src/app/views/offers/components/offers-content/offers-list/offer-sm/offer-sm.component.html
@@ -2,7 +2,7 @@
     <div id="frame" #frame>
     </div>
     <div id="logo">
-        <h3>{{offer.companyLogo}}</h3>
+            <img src={{offer.companyLogo}} alt="logo"/>
     </div>
     <div id="rows">
         <div class="myRow" fxLayout="row">
