--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,7 +15,7 @@ $sidenavWidth: 250px;
 $imagePaddingValue: 7px;
 
 //colors
-$globalBackgroundColor: #f3f6f8;
+$globalBackgroundColor: #EEEEEE;
 
 $navigationBackgroundColor: white;
 
